--- a/public/pages/common/login.html
+++ b/public/pages/common/login.html
@@ -4,6 +4,7 @@
         <meta charset = "utf8">
         <title>Đăng nhập hệ thống</title>
         <link rel = "stylesheet" href = "../../css/base.css"/>
+        <script src = "../../js/login.js"></script>
     </header>
     
     <body class="login-body">
@@ -28,7 +29,7 @@
                         <label for="password">Mật khẩu:</label>
                         <input type="password" id="password" required/>
                         
-                        <input type="submit" value="Đăng nhập"/>
+                        <input type="submit" value="Đăng nhập" onclick = "getUser()"/>
                     </form>
                 </div>
             </div>
