--- a/public/pages/resident/dashboard.html
+++ b/public/pages/resident/dashboard.html
@@ -9,10 +9,10 @@
         <div class = "side-bar">
             <div class = "profile">
                 <div class = "image-profile"></div>
-                    <img src = "../../images/201e14454ff5ff96bf76913580e9d48c.jpg" alt = "admin-profile-picture"/>
+                    <img src = "../../images/201e14454ff5ff96bf76913580e9d48c.jpg" alt = "resident-profile-picture"/>
                 <div class = "name-profile">
                     <!--Se import them tên của admin bằng js-->
-                    <h2 id = "admin-name">Admin Name</h2>
+                    <h2 id = "admin-name">Resident Name</h2>
                 </div>
             </div>
             <div class = "menu">
@@ -24,12 +24,12 @@
                 </ul>
             </div>
             <div class="logout">
-                <button id="logout" onclick = "logout()">Logout</button>
+                <button id="logout" onclick = 'logout()'>Logout</button>
             </div>
         </div>
         <div class = "main-content">
             <!-- Noi dung trang dashboard se duoc render o day -->
         </div>
-        <script src="../../js//admin/dashboard.js"></script>
+        <script src = "../../js/resident/dashboard.js"></script>
     </body>
 </html>
