xong phần FE cho  admin, common, manager

--- a/public/pages/admin/dashboard.html
+++ b/public/pages/admin/dashboard.html
@@ -4,6 +4,9 @@
         <meta charset="utf8">
         <title>Dashboard</title>
         <link rel = "stylesheet" href = "../../css/dashboard-base.css"/>
+        <link rel = "stylesheet" href = "../../css/admin/resident.css"/>
+        <link rel = "stylesheet" href = "../../css/admin/thongke.css"/>
+        <link rel = "stylesheet" href = "../../css/admin/nvh.css"/>
     </head>
     <body>
         <div class = "side-bar">
@@ -20,6 +23,7 @@
                     <li><a href = "#" onclick = 'renderHome()'>Home</a></li>
                     <li><a href = "#" onclick = 'renderResidentManagement()'>Hộ khẩu và Nhân khẩu</a></li>
                     <li><a href = "#" onclick="renderNVHManagement()">Nhà văn hóa</a></li>
+                    <li><a href = "#" onclick = "renderReport()">Báo cáo & Thống kê</a></li>
                     <li><a href = "#" onclick ="renderSetting()">Setting</a></li>
                 </ul>
             </div>
