--- a/public/pages/manager/dashboard.html
+++ b/public/pages/manager/dashboard.html
@@ -4,6 +4,8 @@
         <meta charset="utf8">
         <title>Dashboard</title>
         <link rel = "stylesheet" href = "../../css/dashboard-base.css"/>
+        <link rel = "stylesheet" href = "../../css/manager/nvh.css">
+        <link rel="stylesheet" href= "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     </head>
     <body>
         <div class = "side-bar">
@@ -17,7 +19,6 @@
             </div>
             <div class = "menu">
                 <ul>
-                    <li><a href = "#" onclick = 'renderHome()'>Home</a></li>
                     <li><a href = "#" onclick="renderNVHManagement()">Nhà Văn Hóa</a></li>
                     <li><a href = "#" onclick ="renderSetting()">Setting</a></li>
                 </ul>
