xong phan UI cho project

--- a/public/pages/common/form.html
+++ b/public/pages/common/form.html
@@ -35,9 +35,9 @@
                     <textarea id="reason" rows="5" placeholder="Nhập lý do..."></textarea>
                     <br />
                     <label for="from">Thuê từ:</label>
-                    <input type="date" id="from" required /><br />
+                    <input type="datetime-local" id="from" required /><br />
                     <label for="to">Đến:</label>
-                    <input type="date" id="to" required /><br />
+                    <input type="datetime-local" id="to" required /><br />
                     <input type="submit" />
                 </form>
             </div>
