--- a/public/pages/admin/dashboard.html
+++ b/public/pages/admin/dashboard.html
@@ -7,6 +7,8 @@
         <link rel = "stylesheet" href = "../../css/admin/resident.css"/>
         <link rel = "stylesheet" href = "../../css/admin/thongke.css"/>
         <link rel = "stylesheet" href = "../../css/admin/nvh.css"/>
+        <link rel = "stylesheet" href ="../../css/admin/resident-detail.css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     </head>
     <body>
         <div class = "side-bar">
