--- a/public/pages/resident/dashboard.html
+++ b/public/pages/resident/dashboard.html
@@ -4,6 +4,8 @@
         <meta charset="utf8">
         <title>Dashboard</title>
         <link rel = "stylesheet" href = "../../css/dashboard-base.css"/>
+        <link rel="stylesheet" href="../../css/resident/resident-style.css"/>
+        <link rel="stylesheet" href="../../css/resident/nvh.css">
     </head>
     <body>
         <div class = "side-bar">
@@ -17,8 +19,7 @@
             </div>
             <div class = "menu">
                 <ul>
-                    <li><a href = "#" onclick = 'renderHome()'>Home</a></li>
-                    <li><a href = "#" onclick = 'renderResidentManagement()'>Hộ khẩu và Nhân khẩu</a></li>
+                    <li><a href = "#" onclick = 'renderResident()'>Hộ khẩu và Nhân khẩu</a></li>
                     <li><a href = "#" onclick="renderNVHManagement()">Nhà văn hóa</a></li>
                     <li><a href = "#" onclick ="renderSetting()">Setting</a></li>
                 </ul>
