--- a/public/pages/common/login.html
+++ b/public/pages/common/login.html
@@ -4,7 +4,7 @@
         <meta charset = "utf8">
         <title>Đăng nhập hệ thống</title>
         <link rel = "stylesheet" href = "../../css/base.css"/>
-        <script src = "../../js/login.js"></script>
+        <script src = "../../js/common/login.js"></script>
     </header>
     
     <body class="login-body">
