--- a/public/pages/common/form.html
+++ b/public/pages/common/form.html
@@ -4,7 +4,7 @@
         <meta charset="utf8">
         <title>Điền form</title>
         <link rel="stylesheet" href="../../css/base.css" />
-        <script src = "../../js/formreq.js"></script>
+        <script src = "../../js/common/formreq.js"></script>
     </header>
     <body>
         <div class="top-head">
