--- a/public/pages/common/login.html
+++ b/public/pages/common/login.html
@@ -29,7 +29,7 @@
                         <label for="password">Mật khẩu:</label>
                         <input type="password" id="password" required/>
                         
-                        <input type="submit" value="Đăng nhập" onclick = "getUser()"/>
+                        <input type="submit" value="Đăng nhập" onclick = "getUser(event)"/>
                     </form>
                 </div>
             </div>
