--- a/public/pages/resident/dashboard.html
+++ b/public/pages/resident/dashboard.html
@@ -25,12 +25,13 @@
                 </ul>
             </div>
             <div class="logout">
-                <button id="logout" onclick = 'logout()'>Logout</button>
+                <button id="logout" onclick = 'handleLogout()'>Logout</button>
             </div>
         </div>
         <div class = "main-content">
             <!-- Noi dung trang dashboard se duoc render o day -->
         </div>
         <script src = "../../js/resident/dashboard.js"></script>
+        <script src="../../js/common/logout.js"></script>
     </body>
 </html>
