--- a/public/pages/admin/dashboard.html
+++ b/public/pages/admin/dashboard.html
@@ -29,7 +29,7 @@
                 </ul>
             </div>
             <div class="logout">
-                <button id="logout" onclick = "logout()">Logout</button>
+                <button id="logout" onclick = "handleLogout()">Logout</button>
             </div>
         </div>
         <div class = "main-content">
@@ -37,5 +37,6 @@
         </div>
         <script src="../../js//admin/dashboard.js"></script>
         <script src="../../js/admin/resident.js"></script>
+        <script src="../../js/common/logout.js"></script>
     </body>
 </html>
