--- a/public/pages/admin/dashboard.html
+++ b/public/pages/admin/dashboard.html
@@ -7,6 +7,7 @@
         <link rel = "stylesheet" href = "../../css/admin/resident.css"/>
         <link rel = "stylesheet" href = "../../css/admin/thongke.css"/>
         <link rel = "stylesheet" href = "../../css/admin/nvh.css"/>
+        <link rel="stylesheet" href="../../css/admin/home.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     </head>
     <body>
@@ -36,6 +37,7 @@
             <!-- Noi dung trang dashboard se duoc render o day -->
         </div>
         <script src="../../js//admin/dashboard.js"></script>
+        <script src="../../js/admin/home.js"></script>
         <script src="../../js/admin/resident.js"></script>
         <script src="../../js/common/logout.js"></script>
     </body>
