Fix lại để link web đổi theo hash

--- a/public/pages/admin/dashboard.html
+++ b/public/pages/admin/dashboard.html
@@ -20,15 +20,14 @@
                     <h2 id = "admin-name">Admin Name</h2>
                 </div>
             </div>
-            <div class = "menu">
-                <ul>
-                    <li><a href = "#" onclick = 'renderHome()'>Home</a></li>
-                    <li><a href = "#" onclick = 'renderResidentManagement()'>Hộ khẩu và Nhân khẩu</a></li>
-                    <li><a href = "#" onclick="renderNVHManagement()">Nhà văn hóa</a></li>
-                    <li><a href = "#" onclick = "renderReport()">Báo cáo & Thống kê</a></li>
-                    <li><a href = "#" onclick ="renderSetting()">Setting</a></li>
-                </ul>
-            </div>
+                <div class="menu">
+                    <ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#resident">Hộ khẩu và Nhân khẩu</a></li>
+                        <li><a href="#nvh">Nhà văn hóa</a></li>
+                        <li><a href="#report">Báo cáo & Thống kê</a></li>
+                    </ul>
+                </div>
             <div class="logout">
                 <button id="logout" onclick = "handleLogout()">Logout</button>
             </div>
