cap nhat phan nhan khau va ho khau ra thanh 2 tab rieng biet va xong UI

--- a/public/pages/admin/dashboard.html
+++ b/public/pages/admin/dashboard.html
@@ -4,7 +4,7 @@
         <meta charset="utf8">
         <title>Dashboard</title>
         <link rel = "stylesheet" href = "../../css/dashboard-base.css"/>
-        <link rel = "stylesheet" href = "../../css/admin/resident.css"/>
+        <link rel = "stylesheet" href = "../../css/admin/household.css"/>
         <link rel = "stylesheet" href = "../../css/admin/thongke.css"/>
         <link rel = "stylesheet" href = "../../css/admin/nvh.css"/>
         <link rel="stylesheet" href="../../css/admin/home.css"/>
@@ -23,7 +23,8 @@
                 <div class="menu">
                     <ul>
                         <li><a href="#home">Home</a></li>
-                        <li><a href="#resident">Hộ khẩu và Nhân khẩu</a></li>
+                        <li><a href="#resident">Nhân khẩu</a></li>
+                        <li><a href="#household">Hộ khẩu</a></li>
                         <li><a href="#nvh">Nhà văn hóa</a></li>
                         <li><a href="#report">Báo cáo & Thống kê</a></li>
                     </ul>
@@ -37,7 +38,7 @@
         </div>
         <script src="../../js//admin/dashboard.js"></script>
         <script src="../../js/admin/home.js"></script>
-        <script src="../../js/admin/resident.js"></script>
+        <script src="../../js/admin/household.js"></script>
         <script src="../../js/common/logout.js"></script>
     </body>
 </html>
