cap nhat lai nvh

--- a/public/pages/admin/dashboard.html
+++ b/public/pages/admin/dashboard.html
@@ -37,6 +37,8 @@
             <!-- Noi dung trang dashboard se duoc render o day -->
         </div>
         <script src="../../js//admin/dashboard.js"></script>
+        <script src="../../js/admin/thongke.js"></script>
+        <script src="../../js/admin/nvh.js"></script>
         <script src="../../js/admin/home.js"></script>
         <script src="../../js/admin/household.js"></script>
         <script src="../../js/common/logout.js"></script>
