--- a/public/pages/admin/dashboard.html
+++ b/public/pages/admin/dashboard.html
@@ -41,6 +41,7 @@
         <script src="../../js/admin/nvh.js"></script>
         <script src="../../js/admin/home.js"></script>
         <script src="../../js/admin/household.js"></script>
+        <script src="../../js/admin/resident.js"></script>
         <script src="../../js/common/logout.js"></script>
     </body>
 </html>
