--- a/public/pages/admin/dashboard.html
+++ b/public/pages/admin/dashboard.html
@@ -27,6 +27,7 @@
                         <li><a href="#household">Hộ khẩu</a></li>
                         <li><a href="#nvh">Nhà văn hóa</a></li>
                         <li><a href="#report">Báo cáo & Thống kê</a></li>
+                        <li><a href="#setting">Setting</a></li>
                     </ul>
                 </div>
             <div class="logout">
