--- a/public/pages/admin/dashboard.html
+++ b/public/pages/admin/dashboard.html
@@ -9,6 +9,7 @@
         <link rel = "stylesheet" href = "../../css/admin/nvh.css"/>
         <link rel="stylesheet" href="../../css/admin/home.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     </head>
     <body>
         <div class = "side-bar">
