--- a/public/pages/manager/dashboard.html
+++ b/public/pages/manager/dashboard.html
@@ -32,5 +32,6 @@
         </div>
         <script src = "../../js/manager/dashboard.js"></script>
         <script src="../../js/common/logout.js"></script>
+        <script src="../../js/manager/nvh.js"></script>
     </body>
 </html>
