Thêm chức năng đổi mật khẩu

--- a/public/pages/admin/dashboard.html
+++ b/public/pages/admin/dashboard.html
@@ -45,5 +45,6 @@
         <script src="../../js/admin/household.js"></script>
         <script src="../../js/admin/resident.js"></script>
         <script src="../../js/common/logout.js"></script>
+        <script src="../../js/common/setting.js"></script>
     </body>
 </html>
