--- a/public/pages/manager/dashboard.html
+++ b/public/pages/manager/dashboard.html
@@ -33,5 +33,6 @@
         <script src = "../../js/manager/dashboard.js"></script>
         <script src="../../js/common/logout.js"></script>
         <script src="../../js/manager/nvh.js"></script>
+        <script src="../../js/common/setting.js"></script>
     </body>
 </html>
