--- a/public/pages/resident/dashboard.html
+++ b/public/pages/resident/dashboard.html
@@ -33,5 +33,6 @@
         </div>
         <script src = "../../js/resident/dashboard.js"></script>
         <script src="../../js/common/logout.js"></script>
+        <script src="../../js/common/setting.js"></script>
     </body>
 </html>
