--- a/public/pages/common/form.html
+++ b/public/pages/common/form.html
@@ -37,10 +37,12 @@
                     <input type="text" id="event" required /><br />
                     <label for="place">Địa điểm:</label>
                     <select id ="place">
-                        <option value="main-hall">Hội trường chính</option>
-                        <option value="meeting-room-1">Phòng họp 1</option>
-                        <option value="meeting-room-2">Phòng họp 2</option>
-                        <option value="outdoor-area">Khu vực ngoài trời</option>
+                        <option value="default">Chọn địa điểm</option>
+                        <option value="1">Hội trường lớn</option>
+                        <option value="2">Phòng Sinh Hoạt Cộng Đồng</option>
+                        <option value="3">Phòng Đa Năng</option>
+                        <option value="5">Phòng Sinh Hoạt Thanh Niên</option>
+                        <option value="6">Phòng Nghiên cứu & Tài liệu</option>
                     </select><br />
                     <label for="reason">Lý do:</label>
                     <textarea id="reason" rows="5" placeholder="Nhập lý do..."></textarea>
